2005-06-16  Jim Meyering  <jim@meyering.net>

	* Version 5.3.1.

	Don't embed `this'-style quotes in format strings.
	* src/tr.c: Rather than this: error (..., "...`%s'...", arg);
	do this:                      error (..., "...%s...", quote (arg));
	* src/od.c, src/tr.c, src/csplit.c, src/date.c, src/hostname.c:
	* src/join.c, src/ptx.c, src/seq.c, src/sort.c, src/split.c:
	* src/split.c, src/tail.c: Likewise.

	* src/sleep.c: Include "quote.h".  Remove hard-coded quotes, as above.
	* src/nice.c, src/printf.c, src/fold.c, src/pr.c: Likewise.
	* src/factor.c, src/cat.c, src/expr.c, src/stty.c: Likewise.

	* src/mv.c: Finally remove support for --version-control=S (-V).
	It was deprecated nearly 6 years ago and has been warning
	users to switch to --backup=S since fileutils-4.0j.
	* src/cp.c, src/install.c, src/ln.c: Likewise.

2005-06-15  Jim Meyering  <jim@meyering.net>

	* src/install.c (main): Fix my typo: s/argv[optind]/file[i]/.
	* tests/install/basic-1: Ensure that each `-d'-specified directory
	is created.  Ensure that rel-named dirs are not created when
	chdir($PWD) fails.

	* tests/mkdir/p-3: Add a test for just-fixed bug in mkdir-p.c.

2005-06-14  Paul Eggert  <eggert@cs.ucla.edu>

	Improve diagnostics for restore_cwd failure.
	* src/install.c (main): Standardize on a diagnostic for
	restore_cwd failure, and report errno.
	(install_file_in_file_parents): Fail if restore_cwd fails and
	one of the files is relative.  This fixes a bug (albeit unlikely).
	* src/mkdir.c (create_parents): Remove static var (now local to 'main').
	(main): Standardize on a diagnostic for restore_cwd failure,
	and report errno.
	Don't bother to check cwd_errno unless create_parents.
	Use mkdir rather than make_dir; it's simpler.

	* src/install.c (main): Adjust to new make_dir_parents convention.
	* src/mkdir.c (main): Likewise.

2005-06-14  Jim Meyering  <jim@meyering.net>

	* tests/mkdir/p-3: Ensure mkdir succeeds if the following argument
	is an absolute directory name.
